# game-tech

./: .cproject  .gitignore  Ball.h  Ball.h.orig  BallManager.cpp  BallManager.h  CameraMan.h  Design Doc.txt  Makefile  Makefile.am  Makefile.in  MinimalOgre.cpp  MinimalOgre.h  NetManager.cpp  NetManager.h  NetTestClient.cpp  OgreApp  OgreMotionState.h  README.md  Simulator.cpp  Simulator.h  SoundManager.cpp  SoundManager.h  TileGame.cpp  TileGame.cpp.orig  TileGame.h  TileSimulator.cpp  TutorialApplication.cpp  TutorialApplication.h  config.status  configure  configure.ac  controls.txt  libtool  ogre.cfg  plugins.cfg
.deps/: OgreApp-BaseApplication.Po  OgreApp-MinimalOgre.Po  OgreApp-Simulator.Po  OgreApp-TutorialApplication.Po
Debug/: makefile  objects.mk  sources.mk  subdir.mk
Debug/media/materials/programs/: subdir.mk
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
media/materials/scripts/: Examples.material  Examples.material~
media/models/: Sphere.mesh
